tests/models/enum/unnamed/f32/pass/lt.rs
use dade::model;
#[model]
enum TestModel {
    Value(
       #[field(lt = 2.0)]
        f32
    ),
}
fn main() {}
